<resources>

    <string name="app_name">ARTicle</string>
    <string name="title">article_title</string>
    <string name="caption">article_caption</string>
    <string name="description">article_description</string>
    <string name="contents">article_contents</string>
    <string name="content_description_image">Image</string>
    <string name="comments">Комментарии</string>
    <string name="share">Поделиться</string>
    <string name="todo">TODO</string>
    <string name="my_articles">Мои статьи</string>
    <string name="about_me">Обо мне</string>
    <string name="robot_desc">robot</string>
    <string name="back_button_desc">back</string>
    <string name="registration_text">Войдите в систему</string>
    <string name="forget">Я всё забыл</string>
    <string name="uid">Ваш логин</string>
    <string name="upassword">Ваш пароль</string>
    <string name="password">Пароль</string>
    <string name="password_input">Введите 7-20 символов</string>
    <string name="in">Войти</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="phone">Телефон или почта</string>
    <string name="more">Подробнее</string>
    <string name="repeat">Повторить</string>
    <string name="next">Пропустить</string>
    <string name="new_id">Придумайте свой уникальный логин</string>
    <string name="new_username">Подумайте над именем</string>
    <string name="new_password">Теперь - пароль</string>
    <string name="repeated_password">И теперь - повторите пароль!</string>
    <string name="smart_registration">Зарегистрируйтесь с умом..</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="username">Имя пользователя</string>
    <integer name="com_vk_sdk_AppId">51878928</integer>
    <string name="invalid">Неверный формат ввода</string>
    <string name="valid">Данные корректны</string>
    <string name="nextStep">Далее</string>
    <string name="no_matching">Ваши пароли не совпадают</string>
    <string name="success">Вы успешно зарегестрированы в системе!</string>
    <string name="continue_reg">Продолжить</string>
    <string name="user_exists">Данный логин уже есть в системе</string>
    <string name="username_exists">Такое имя пользователя уже существует</string>
    <string name="authorization_error">Вы ввели неверный логин или пароль</string>
    <string name="recover_password">Востановление пароля</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Подтвердить</string>
    <string name="recivery_conditions">Забыли пароль? Для восстановления, введите номер телефона или почту, на которую зарегестрирован Ваш аккаунт.</string>
    <string name="to_menu">Перейти в гланое меню</string>
    <string name="by_author"> .by</string>
    <string name="create_article__post_button">Опубликовать</string>
    <string name="create_article__content_description">Картинка статьи</string>
    <string name="create_article__enter_title">Введите название</string>
    <string name="create_article__enter_caption">Отображается в поиске</string>
    <string name="create_article__enter_article_content">Поделитель мыслями с миром</string>
    <string name="create_article__enter_description">Описание статьи</string>
    <string name="create_article__close_button">Close</string>
    <string name="create_article__add_photo">Add photo</string>
    <string name="create_article__title_label">Название</string>
    <string name="create_article__caption_label">Краткое описание</string>
    <string name="create_article__description_label">Описание</string>
    <string name="create_article__content_label">Содержание</string>
    <string name="avatar_full">full avatar image</string>
</resources>