<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/profile_default_margin"
        android:src="@drawable/back_button_image"
        android:background="@null"
        android:contentDescription="@string/back_button_desc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/article_image_iv" />

    <ImageView
        android:id="@+id/article_image_iv"
        android:layout_width="wrap_content"
        android:layout_height="227dp"
        android:layout_marginTop="@dimen/profile_default_margin"
        android:contentDescription="@string/content_description_image"
        android:src="@drawable/jojo_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <LinearLayout
        android:id="@+id/author_nickname_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="end"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_image_iv"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:layout_marginEnd="5dp"
            android:text="@string/by_author"/>

        <TextView
            android:id="@+id/article_author_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/article_title_tv"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_nickname_line" />

    <TextView
        android:id="@+id/article_description_tv"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_title_tv" />

    <TextView
        android:id="@+id/article_caption_tv"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:text="@string/caption"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_description_tv" />


    <TextView
        android:id="@+id/article_contents_tv"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="80dp"
        android:text="@string/contents"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_caption_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_comments"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_rounded_3"
        android:text="@string/comments"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_contents_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_share"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_rounded_3"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_comments" />

</androidx.constraintlayout.widget.ConstraintLayout>